--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: link_sdk_flutter
-description: A new Flutter package project.
-version: 0.0.1
+description: Link SDK Flutter.
+version: 0.5.0
 homepage:
 
 environment:
