--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: link_sdk_flutter_demo
-description: A new Flutter project.
+name: lean_sdk_flutter_demo
+description: A Sample Flutter Lean SDK project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -28,7 +28,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  link_sdk_flutter:
+  lean_sdk_flutter:
     path: ../
 
 
