--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: link_sdk_flutter
-description: A new Flutter package project.
-version: 0.0.1
-homepage:
+name: lean_sdk_flutter
+description: Lean SDK Flutter.
+version: 0.5.0
+homepage: https://github.com/leantechnologies/link-sdk-flutter
 
 environment:
   sdk: ">=2.17.5 <3.0.0"
