--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: lean_sdk_flutter
 description: Lean SDK Flutter.
-version: 3.0.0
+version: 3.0.0-alpha.1
 homepage: https://github.com/leantechnologies/link-sdk-flutter
 
 environment:
