--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -50,5 +50,7 @@
       <string>https</string>
       <string>http</string>
     </array>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 </dict>
 </plist>
