--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -12,7 +12,8 @@ jobs:
         with:
           distribution: 'liberica'
           java-version: '17'
-      - run: fastlane android build_android
+      - run: bundle install
+      - run: bundle exec fastlane android build_android
 
       # Upload the APK to the build number folder
       - uses: hkusu/s3-upload-action@v2
@@ -21,7 +22,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: 'eu-west-2'
           aws-bucket: ${{ secrets.AWS_BUCKET }}
-          file-path: 'example/build/app/outputs/flutter-apk/app-debug.apk'
+          file-path: 'example/build/app/outputs/flutter-apk/app-release.apk'
           destination-dir: '/'
           bucket-root: ${{ format('/link/webview/flutter/android/build.{0}', github.run_number) }}
 
@@ -32,7 +33,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: 'eu-west-2'
           aws-bucket: ${{ secrets.AWS_BUCKET }}
-          file-path: 'example/build/app/outputs/flutter-apk/app-debug.apk'
+          file-path: 'example/build/app/outputs/flutter-apk/app-release.apk'
           destination-dir: '/'
           bucket-root: '/link/webview/flutter/android/latest'
 
@@ -50,7 +51,8 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
-      - run: fastlane ios build_ios
+      - run: bundle install
+      - run: bundle exec fastlane ios build_ios
 
       # Upload the IPA to the build number folder
       - uses: hkusu/s3-upload-action@v2
