--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -2,17 +2,35 @@ name: build-apps
 on:
   push:
     branches:
-      - 'v2' # @TODO: change branch to master after release of v2
+      - v2 # @TODO: change branch to master after release of v2
 jobs:
   android_build:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          distribution: 'liberica'
-          java-version: '17'
+          distribution: liberica
+          java-version: 17
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
+
+      - name: Setup Flutter SDK
+        uses: flutter-actions/setup-flutter@v2
+        with:
+          channel: stable
+          version: 3.0.2
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Setup Fastlane
       - run: bundle install
+
+      - name: Build APK
       - run: bundle exec fastlane android build_android
 
       # Upload the APK to the build number folder
@@ -41,8 +59,8 @@ jobs:
         uses: chetan/invalidate-cloudfront-action@v2
         env:
           DISTRIBUTION: ${{ secrets.DISTRIBUTION_ID }}
-          PATHS: "/link/webview/flutter/android/*"
-          AWS_REGION: "eu-west-2"
+          PATHS: '/link/webview/flutter/android/*'
+          AWS_REGION: 'eu-west-2'
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
@@ -51,7 +69,20 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
+
+      - name: Setup Flutter SDK
+        uses: flutter-actions/setup-flutter@v2
+        with:
+          channel: stable
+          version: 3.0.2
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Setup Fastlane
       - run: bundle install
+
+      - name: Build IPA
       - run: bundle exec fastlane ios build_ios
 
       # Upload the IPA to the build number folder
@@ -80,7 +111,7 @@ jobs:
         uses: chetan/invalidate-cloudfront-action@v2
         env:
           DISTRIBUTION: ${{ secrets.DISTRIBUTION_ID }}
-          PATHS: "/link/webview/flutter/ios/*"
-          AWS_REGION: "eu-west-2"
+          PATHS: '/link/webview/flutter/ios/*'
+          AWS_REGION: 'eu-west-2'
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
