v2 Flutter SDK Wrapper (#13)
* feat: initial setup for new sdk wrapper

* feat: setup enums

* feat: generate initialization urls for each lean method

* feat: setup new wrapper class and helpers; implement base for connect method

* feat: support all flows

* chore: enable test UI for SDK flows

* feat: mark internal methods as private; remove link

* feat: handle URL overloading

* refactor: rename enums.dart to lean_types.dart

* tests: add tests for all lean methods

* feat: support logging for debugging

* fix: launch URLs in external browser app

* chore: cleanup

* fix: update required properties

* test: update tests

* chore: include customization in example

* feat: capture analytics data

* chore: prepare for release

* tests: support implementation_config

* chore: remove generated files

* chore: remove pubspec.lock from git

* chore: rename implementation function

* chore: remove app token and customer id from example

* chore: pre-release v3.0.0-alpha.1

* chore: include pinned version status

* chore: fix package name in readme

* fix: add return type that matches the expected type for navigationDelegate

* chore: Bump version 3.0.0-alpha.4

* fix: allow initial https: URL navigation to load CDN file on iOS

* chore: Bump version 3.0.0-alpha.5

* FEN-54: GA<>Fastlane support

* chore: build_type = Release

* chore: use "bundle exec" for faster run times

* chore: setup Flutter and Android SDKs

* chore: add gradle files to git

* fix: step config

* chore: named steps; bump flutter version

* FEN-99: parse initialization URL to Uri before loading the page

--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -45,5 +45,12 @@
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	<key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>https</string>
+      <string>http</string>
+    </array>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 </dict>
 </plist>
