--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: lean_sdk_flutter
 description: Lean SDK Flutter.
-version: 0.5.0
+version: 3.0.0-alpha.6
 homepage: https://github.com/leantechnologies/link-sdk-flutter
 
 environment:
-  sdk: ">=2.17.5 <3.0.0"
+  sdk: ">=2.17.5 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
@@ -12,11 +12,13 @@ dependencies:
     sdk: flutter
 
   webview_flutter: ^3.0.4
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  test: ^1.21.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
