--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -52,5 +52,7 @@
     </array>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+    <key>NSCameraUsageDescription</key>
+    <string>If you want to use the camera, you have to give permission.</string>
 </dict>
 </plist>
