--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  webview_flutter: ^3.0.4
+  webview_flutter: ^4.2.4
   url_launcher: ^6.0.9
+  permission_handler: ^11.0.0
 
 dev_dependencies:
   flutter_test:
