--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -31,6 +31,11 @@
 		<string>https</string>
 		<string>http</string>
 	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>https</string>
+		<string>http</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
