--- a/example/ios/Runner/Runner.entitlements
+++ b/example/ios/Runner/Runner.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:leantech.me</string>
+		<string>applinks:cdn.leantech.me</string>
 	</array>
 </dict>
 </plist>
