CX-1041: Flutter upgrade

--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -40,6 +40,8 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>If you want to use the camera, you have to give permission.</string>
+	<key>NSLocalNetworkUsageDescription</key>
+    <string>This app requires local network access for debugging purposes.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
